# survey_analysis

./: AGENTS.md  LICENSE  README.md  chart_plot.py  config.json  data_analysis copy.py  data_analysis.py  data_analysis_regression.py  data_analysis_sem.py  fix_app.py  helper_functions copy.py  helper_functions.py  pyproject.toml  requirements.txt  requirements_regression.txt  streamlit_app copy.py  streamlit_app.py  streamlit_app_regression.py  streamlit_app_sem.py  survey_analysis_regression.py  survey_analysis_sem.py  survey_analyze_sem copy 2.py  survey_analyze_sem copy.py  survey_analyze_sem.py  survey_common.py  survey_quality_analysis.py  test_analysis.py  tmp_report_call.txt
data/: Fintech_profile_22_SEPT_2023.xlsx  INFO_International_Student_Data.xlsx  data_model_sample_1.xlsx  data_model_template.xlsx  model_1.xlsx  model_2.xlsx  model_3.xlsx  model_sample_1.xlsx  model_sample_2.xlsx  model_sample_hoa.xlsx  survey_1.xlsx  survey_4.xlsx  survey_data_2.xlsx  survey_data_4.xlsx  survey_data_hoa.xlsx  survey_data_response_dung.xlsx  survey_data_sample_1.xlsx  survey_data_sample_1_en.xlsx  survey_data_sample_1_vi.xlsx  survey_data_sample_2.xlsx  travel_data_1.xlsx  travel_model_1.xlsx
output/: Correlation_Matrix.xlsx  Correlation_Table.xlsx  Demographic_Stats.xlsx  Du-lieu-SIM-14-20-9-2023.vcf  EFA_Analysis.xlsx  Independent_Stats.xlsx  Multivariate_Regression_Summary.docx  Multivariate_Regression_Summary_1.docx  Multivariate_Regression_Summary_2.docx  Multivariate_Regression_Summary_3.docx  Multivariate_Regression_Summary_4.docx  SEM_Model_Stats.xlsx  (+3 more)
src/: app.py  (+9 more)
